# research-gpu

./: .gitignore  .gitmodules
mandelbrot/: CMakeLists.txt
mandelbrot/cmake/: Toolchain-sycl-windows.cmake
mandelbrot/lib/glad/: CMakeLists.txt  glad.h
mandelbrot/src/: cuda_selector.hpp  main.cpp
mandelbrot/src/gfx/: display.cpp  renderer.cpp  renderer.hpp
raytracer/: CMakeLists.txt
raytracer/cmake/: Toolchain-sycl-windows.cmake
raytracer/lib/glad/: glad.c
raytracer/src/: color.cpp  color.hpp  cuda_selector.hpp  main.cpp  ray.cpp  ray.hpp  vec3.hpp
raytracer/src/gfx/: camera.cpp  camera.hpp  display.hpp  renderer.cpp  renderer.hpp
sudoku-sycl/: Makefile  board.cpp  board.hpp  cuda_selector.hpp  main.cpp
sudoku-sycl/boards/: easyboard.txt  testboard.txt
